# gokart

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Pipfile  README.md  luigi.cfg  pyproject.toml  setup.py  slog_example.py  tox.ini  yapf.ini
.github/: CODEOWNERS
.github/workflows/: format.yml  isort.yml  main.yml  publish.yml  test.yml
docs/: .gitignore  conf.py  efficient_run_on_multi_workers.rst  external_links.rst  for_pandas.rst  for_polars.rst  gokart.rst  index.rst  intro_to_gokart.rst  logging.rst  mypy_plugin.rst  polars.rst  requirements.txt  setting_task_parameters.rst  slack_notification.rst  task_information.rst  task_on_kart.rst  task_parameters.rst  task_settings.rst  tutorial.rst  using_task_cache_collision_lock.rst  using_task_task_conflict_prevention_lock.rst
examples/: gokart_jupyter_example.ipynb  gokart_notebook_example.ipynb  logging.ini  param.ini  sample_dynamic_requires.py  sample_fix_random_seed.py  sample_main.py  sample_pandas_type_check.py  sample_task.py  sample_task_log.py
gokart/: __init__.py  build.py  build_process_task_info.py  config_params.py  dependencies.py  file_processor.py  foo.py  gcs_config.py  gcs_obj_metadata_client.py  gcs_zip_client.py  gokart_logger.py  info.py  mypy.py  object_storage.py  pandas_type_config.py  parameter.py  redis_lock.py  required_task_output.py  run.py  run_with_lock.py  s3_config.py  s3_zip_client.py  slog_config.py  target.py  task.py  task_complete_check.py  task_info.py  utils.py  worker.py  workspace_config.py  workspace_management.py  zip_client.py  zip_client_util.py
gokart/conflict_prevention_lock/: run_with_lock.py  task_conflict_prevention_lock.py  task_lock.py  task_lock_wrappers.py  wrap_run_with_lock.py
gokart/errors/: __init__.py
gokart/file_processor/: __init__.py  base.py  pandas.py  polars.py
gokart/in_memory/: __init__.py  cacheable.py  data.py  repository.py  target.py
gokart/slack/: README.md  __init__.py  event_aggregator.py  slack_api.py  slack_config.py
gokart/testing/: __init__.py  check_if_run_with_empty_data_frame.py  pandas_assert.py
gokart/tree/: task_info.py  task_info_formatter.py
test/: helpers.py  large_data_fram_processor_test.py  target_test.py  task_on_kart_test.py  test_build.py  test_cache_unique_id.py  test_config.ini  test_config_params.py  test_dependencies.py  test_explicit_bool_parameter.py  test_extras.py  test_file_processor.py  test_file_processor_pandas.py  test_file_processor_polars.py  test_gcs_config.py  test_gcs_obj_metadata_client.py  test_info.py  test_large_data_fram_processor.py  test_large_data_frame_processor.py  test_list_task_instance_parameter.py  test_mypy.py  test_pandas_type_check_framework.py  test_pandas_type_config.py  test_pyproject_extra.py  test_redis_lock.py  test_restore_task_by_id.py  test_run.py  test_s3_config.py  test_s3_zip_client.py  test_serializable_parameter.py  test_slog_config.py  test_target.py  test_task_info.py  test_task_instance_parameter.py  test_task_on_kart.py  test_timestamp_parameter.py  test_utils.py  test_worker.py  test_zoned_date_second_parameter.py  util.py
test/collision_lock/: test_redis_lock.py
test/config/: __init__.py  pyproject.toml  pyproject_disallow_missing_parameters.toml  pyproject_error_on_missing_parameters.toml  test_cache_unique_id_config.ini  test_config.ini
test/conflict_prevention_lock/: test_task_lock.py  test_task_lock_wrappers.py
test/file_processor/: test_base.py  test_factory.py  test_pandas.py  test_polars.py
test/in_memory/: test_cacheable_target.py  test_in_memory_target.py  test_repository.py  test_task_cached_in_memory.py
test/slack/: test_slack_api.py
test/testing/: test_pandas_assert.py  test_run_with_empty_data_frame.py
test/tree/: test_task_info.py  test_task_info_formatter.py
