[tool.poetry]
name = "gokart"
version = "0.0.0"  # using poetry-dynamic-versioning
description="Gokart solves reproducibility, task dependencies, constraints of good code, and ease of use for Machine Learning Pipeline. [Documentation](https://gokart.readthedocs.io/en/latest/)"
authors = ["M3, inc."]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m3dev/gokart"
repository = "https://github.com/m3dev/gokart"
documentation = "https://gokart.readthedocs.io/en/latest/"


[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
luigi = "*"
boto3 = "*"
slack-sdk = "^3"
pandas = "*"
numpy = "*"
tqdm = "*"
google-auth = "*"
pyarrow = "*"
uritemplate = "*"
google-api-python-client = "*"
APScheduler = "*"
redis = "*"
matplotlib = "*"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
tox = "*"
moto = "*"
testfixtures = "*"
coverage = "*"
toml = "*"
lupa = "*"
fakeredis = "*"
mypy = "*"
types-redis = "*"

[tool.ruff]
# All the rules are listed on https://docs.astral.sh/ruff/rules/
extend-select = [
  "B", # bugbear
  "I" # isort
]

# B006: Do not use mutable data structures for argument defaults. They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
# B008 Do not perform function calls in argument defaults.  The call is performed only once at function definition time. All calls to your function will reuse the result of that definition-time function call.  If this is intended, assign the function call to a module-level variable and use that variable as a default value.
ignore = ["B006", "B008"]

line-length = 160
exclude = ["venv/*", "tox/*"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
